# PromptProof

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-gui.txt  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  __main__.py  cli.py  gui.py
engine/: __init__.py  chain.py  errors.py  feedback.py  gates.py  llm.py  tools.py  trace.py
engine/prompts/: __init__.py  extract.py  judge.py
engine/steps/: __init__.py  extract.py  judge.py
plans/: promptproof.md  start-prompt.md
tests/: conftest.py  test_chain.py  test_cli.py  test_extract.py  test_feedback.py  test_gates.py  test_golden.py  test_gui.py  test_judge.py  test_smoke.py  test_tools.py
