[project]
name = "promptproof"
version = "0.0.0"
description = "A self-correcting prompting engine that fact-checks claims against live web evidence."
requires-python = ">=3.11"

[tool.pytest.ini_options]
# Run pytest from the repo root; make the project importable as `engine`, `app`.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[tool.ruff.lint.per-file-ignores]
# Prompt templates carry long example lines on purpose (few-shot examples, JSON shapes).
"engine/prompts/*.py" = ["E501"]
