[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptproof"
version = "0.1.0"
description = "A self-correcting prompting engine that fact-checks claims against live web evidence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HelloJahid" }]
keywords = [
    "llm",
    "prompt-engineering",
    "pydantic",
    "agents",
    "reliability",
    "fact-checking",
    "llm-as-judge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.112",
    "pydantic>=2.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.58"]
dev = ["ruff>=0.15"]

[project.urls]
Homepage = "https://github.com/HelloJahid/PromptProof"
Repository = "https://github.com/HelloJahid/PromptProof"
Issues = "https://github.com/HelloJahid/PromptProof/issues"

[project.scripts]
promptproof = "app.cli:main"

[tool.setuptools]
# Flat layout: ship the engine and its interface, not the tests or planning notes.
packages = ["engine", "engine.prompts", "engine.steps", "app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[tool.ruff.lint.per-file-ignores]
# Prompt templates carry long example lines on purpose (few-shot examples, JSON shapes).
"engine/prompts/*.py" = ["E501"]
